segment added to prevention video

--- a/apply_mask_and_lanes.ipynb
+++ b/apply_mask_and_lanes.ipynb
@@ -12,8 +12,16 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e61e229c4124dba85ce16a8aa455fa3d75395fc3e033cc05ffee5ec1b7753cf7"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
